--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@tanstack/react-query": "^5.90.16",
     "antd": "^6.1.2",
     "apexcharts": "^4.1.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
@@ -39,8 +41,9 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
